--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html, body {
 }
 
 body {
-  background: url(assets/bg_img.jpg) no-repeat center center/cover;
+  background: url(bg_img.jpg) no-repeat center center/cover;
   position: relative;
 }
 
